Created UI and functionality from Direct chat info page.

--- a/SceytChatUiKit/src/main/res/layout/dialog_channel_actions.xml
+++ b/SceytChatUiKit/src/main/res/layout/dialog_channel_actions.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
-        android:drawableStart="@drawable/sceyt_ic_block"
+        android:drawableStart="@drawable/sceyt_ic_un_block"
         android:drawablePadding="15dp"
         android:gravity="center_vertical"
         android:includeFontPadding="false"
@@ -70,7 +70,7 @@
         android:includeFontPadding="false"
         android:paddingHorizontal="23dp"
         android:paddingVertical="10dp"
-        android:text="@string/sceyt_delete"
+        android:text="@string/sceyt_delete_chat"
         android:textColor="@color/sceyt_color_red"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintStart_toStartOf="parent"
