--- a/SceytChatUiKit/src/main/res/layout/dialog_mute_notifications.xml
+++ b/SceytChatUiKit/src/main/res/layout/dialog_mute_notifications.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:paddingHorizontal="18dp"
         android:paddingVertical="10dp"
-        android:text="@string/sceyt_disable_notifications"
+        android:text="@string/sceyt_mute_chat"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/mediumTextSize"
         android:textStyle="bold" />
@@ -34,18 +34,7 @@
         android:background="?selectableItemBackground"
         android:paddingHorizontal="18dp"
         android:paddingVertical="10dp"
-        android:text="@string/sceyt_mute_for_2_hours"
-        android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="@dimen/mediumTextSize" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/muteOneDay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?selectableItemBackground"
-        android:paddingHorizontal="18dp"
-        android:paddingVertical="10dp"
-        android:text="@string/sceyt_mute_for_1_day"
+        android:text="@string/sceyt_mute_for_8_hours"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/mediumTextSize" />
 
