--- a/SceytChatUiKit/src/main/res/layout/fragment_channel_members.xml
+++ b/SceytChatUiKit/src/main/res/layout/fragment_channel_members.xml
@@ -4,35 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="15dp">
+    android:background="@color/sceyt_color_bg">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/addMembers"
+    <com.sceyt.sceytchatuikit.presentation.customviews.SceytSearchableToolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/sceyt_ic_add_members"
-        android:drawablePadding="16dp"
-        android:gravity="center_vertical"
-        android:lines="1"
-        android:paddingHorizontal="15dp"
-        android:paddingBottom="10dp"
-        android:text="@string/sceyt_add_members"
-        android:textColor="@color/sceyt_color_accent"
-        android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_scrollFlags="scroll|enterAlways|snap" />
+        app:sceytSearchableToolbarEnableSearch="false"
+        app:sceytSearchableToolbarTitle="@string/sceyt_members" />
+
+    <View
+        android:id="@+id/underline"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/sceyt_color_divider"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/layoutAddMembers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
+        android:gravity="center_vertical"
+        android:paddingVertical="7dp"
+        app:layout_constraintTop_toBottomOf="@+id/underline">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/icAddMembers"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="15dp"
+            android:background="@drawable/sceyt_ic_add_members_bg"
+            app:layout_constraintBottom_toBottomOf="@+id/addMembers"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/addMembers"
+            app:srcCompat="@drawable/sceyt_ic_add_members" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/addMembers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:lines="1"
+            android:paddingHorizontal="15dp"
+            android:text="@string/sceyt_add_members"
+            android:textColor="@color/sceyt_color_text_themed"
+            android:textSize="@dimen/mediumTextSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/icAddMembers" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMembers"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:clipToPadding="false"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addMembers"
-        tools:listitem="@layout/item_channel_member" />
+        app:layout_constraintTop_toBottomOf="@+id/layoutAddMembers"
+        tools:listitem="@layout/item_channel_members" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
