Added logic to subscribe members update in channel info pages. Added logic to setup info pages with channel type. Added Member actions logic.

--- a/SceytChatUiKit/src/main/res/layout/fragment_channel_members.xml
+++ b/SceytChatUiKit/src/main/res/layout/fragment_channel_members.xml
@@ -21,51 +21,67 @@
         android:background="@color/sceyt_color_divider"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/layoutAddMembers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?selectableItemBackground"
-        android:gravity="center_vertical"
-        android:paddingVertical="7dp"
-        app:layout_constraintTop_toBottomOf="@+id/underline">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/icAddMembers"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="15dp"
-            android:background="@drawable/sceyt_ic_add_members_bg"
-            app:layout_constraintBottom_toBottomOf="@+id/addMembers"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/addMembers"
-            app:srcCompat="@drawable/sceyt_ic_add_members" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/addMembers"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:lines="1"
-            android:paddingHorizontal="15dp"
-            android:text="@string/sceyt_add_members"
-            android:textColor="@color/sceyt_color_text_themed"
-            android:textSize="@dimen/mediumTextSize"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/icAddMembers" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMembers"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:clipToPadding="false"
-        android:overScrollMode="never"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layoutAddMembers"
-        tools:listitem="@layout/item_channel_members" />
+        app:layout_constraintTop_toBottomOf="@+id/underline">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:elevation="0dp">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/layoutAddMembers"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?selectableItemBackground"
+                android:gravity="center_vertical"
+                android:paddingVertical="7dp"
+                app:layout_scrollFlags="scroll|enterAlways">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/icAddMembers"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="15dp"
+                    android:background="@drawable/sceyt_ic_add_members_bg"
+                    app:layout_constraintBottom_toBottomOf="@+id/addMembers"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/addMembers"
+                    app:srcCompat="@drawable/sceyt_ic_add_members" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/addMembers"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:lines="1"
+                    android:paddingHorizontal="15dp"
+                    android:text="@string/sceyt_add_members"
+                    android:textColor="@color/sceyt_color_text_themed"
+                    android:textSize="@dimen/mediumTextSize"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/icAddMembers" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvMembers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layoutAddMembers"
+            tools:listitem="@layout/item_channel_members" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
