--- a/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_private_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_private_channel.xml
@@ -8,6 +8,7 @@
         android:id="@+id/call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_phone_24"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_video_24"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -34,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_muted_channel"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -47,6 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_more_24"
         android:drawablePadding="10dp"
         android:gravity="center"
