--- a/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_direct_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_direct_channel.xml
@@ -9,6 +9,7 @@
         android:id="@+id/video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_video_24"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_phone_24"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -37,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_muted_channel"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -50,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_more_24"
         android:drawablePadding="10dp"
         android:gravity="center"
