--- a/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_public_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_public_channel.xml
@@ -9,6 +9,7 @@
         android:id="@+id/muteUnMute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_muted_channel"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -29,6 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_leave"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -46,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_invite_users_24"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -63,6 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_invite_users_24"
         android:drawablePadding="10dp"
         android:gravity="center"
@@ -80,6 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_more_24"
         android:drawablePadding="10dp"
         android:gravity="center"
