--- a/SceytChatUiKit/src/main/res/values/colors.xml
+++ b/SceytChatUiKit/src/main/res/values/colors.xml
@@ -37,4 +37,7 @@
     <color name="sceyt_gallery_item_default_color">#F3F5F7</color>
     <color name="sceyt_progress_bg_color">#6617191C</color>
 
+    <color name="sceyt_color_bg_color">#17191C</color>
+    <color name="sceyt_color_text">#17191C</color>
+
 </resources>
