Added logic to add admins.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_private_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_private_channel.xml
@@ -15,7 +15,8 @@
         android:minWidth="50dp"
         android:text="@string/sceyt_call"
         android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="13sp" />
+        android:textSize="13sp"
+        android:visibility="gone" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/video"
@@ -29,13 +30,13 @@
         android:minWidth="50dp"
         android:text="@string/sceyt_video_small_case"
         android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="13sp" />
+        android:textSize="13sp"
+        android:visibility="gone" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/muteUnMute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_muted_channel"
         android:drawablePadding="10dp"
