Added logic to edit group.

--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_add_members.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_add_members.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="40">
   <path
       android:pathData="M20,12C20.552,12 21,12.448 21,13V19L27,19C27.552,19 28,19.448 28,20C28,20.552 27.552,21 27,21L21,21L21,27C21,27.552 20.552,28 20,28C19.448,28 19,27.552 19,27L18.999,21L13,21C12.448,21 12,20.552 12,20C12,19.448 12.448,19 13,19L18.999,19L19,13C19,12.448 19.448,12 20,12Z"
-      android:fillColor="#0DBD8B"/>
+      android:fillColor="#4F6AFF"/>
 </vector>
