--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_info.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_info.xml
@@ -5,12 +5,12 @@
     android:viewportHeight="24">
   <path
       android:pathData="M10.916,11.882C10.916,11.298 11.39,10.823 11.974,10.823C12.559,10.823 13.033,11.298 13.033,11.882V16.235C13.033,16.82 12.559,17.294 11.974,17.294C11.39,17.294 10.916,16.82 10.916,16.235V11.882Z"
-      android:fillColor="#0DBD8B"/>
+      android:fillColor="#4F6AFF"/>
   <path
       android:pathData="M11.974,6.706C11.325,6.706 10.798,7.233 10.798,7.882C10.798,8.532 11.325,9.059 11.974,9.059C12.624,9.059 13.151,8.532 13.151,7.882C13.151,7.233 12.624,6.706 11.974,6.706Z"
-      android:fillColor="#0DBD8B"/>
+      android:fillColor="#4F6AFF"/>
   <path
       android:pathData="M12,20.125C16.487,20.125 20.125,16.487 20.125,12C20.125,7.513 16.487,3.875 12,3.875C7.513,3.875 3.875,7.513 3.875,12C3.875,16.487 7.513,20.125 12,20.125ZM12,22C17.523,22 22,17.523 22,12C22,6.477 17.523,2 12,2C6.477,2 2,6.477 2,12C2,17.523 6.477,22 12,22Z"
-      android:fillColor="#0DBD8B"
+      android:fillColor="#4F6AFF"
       android:fillType="evenOdd"/>
 </vector>
