--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_un_block.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_un_block.xml
@@ -5,10 +5,10 @@
     android:viewportHeight="24">
   <path
       android:pathData="M12,3.818C7.481,3.818 3.818,7.481 3.818,12C3.818,16.519 7.481,20.182 12,20.182C16.519,20.182 20.182,16.519 20.182,12C20.182,7.481 16.519,3.818 12,3.818ZM2,12C2,6.477 6.477,2 12,2C17.523,2 22,6.477 22,12C22,17.523 17.523,22 12,22C6.477,22 2,17.523 2,12Z"
-      android:fillColor="#0DBD8B"
+      android:fillColor="#4F6AFF"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M6.949,12C6.949,11.498 7.357,11.091 7.859,11.091H16.141C16.643,11.091 17.051,11.498 17.051,12C17.051,12.502 16.643,12.909 16.141,12.909H7.859C7.357,12.909 6.949,12.502 6.949,12Z"
-      android:fillColor="#0DBD8B"
+      android:fillColor="#4F6AFF"
       android:fillType="evenOdd"/>
 </vector>
