--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_choose_file_type.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_choose_file_type.xml
@@ -17,6 +17,17 @@
         android:textSize="@dimen/mediumTextSize" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvTakeVideo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
+        android:paddingHorizontal="18dp"
+        android:paddingVertical="10dp"
+        android:text="@string/sceyt_take_video"
+        android:textColor="@color/sceyt_color_text_themed"
+        android:textSize="@dimen/mediumTextSize" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvUploadFromGallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
