--- a/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_public_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_public_channel.xml
@@ -9,6 +9,7 @@
         android:id="@+id/muteUnMute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_muted_channel"
         android:drawablePadding="10dp"
@@ -29,7 +30,7 @@
         android:id="@+id/leave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_leave"
         android:drawablePadding="10dp"
@@ -47,7 +48,7 @@
         android:id="@+id/join"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_invite_users_24"
         android:drawablePadding="10dp"
@@ -65,7 +66,7 @@
         android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_invite_users_24"
         android:drawablePadding="10dp"
@@ -83,7 +84,7 @@
         android:id="@+id/more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_more_24"
         android:drawablePadding="10dp"
