--- a/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_direct_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_direct_channel.xml
@@ -9,6 +9,7 @@
         android:id="@+id/video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_video_24"
         android:drawablePadding="10dp"
@@ -24,7 +25,7 @@
         android:id="@+id/audio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_phone_24"
         android:drawablePadding="10dp"
@@ -38,7 +39,7 @@
         android:id="@+id/muteUnMute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_muted_channel"
         android:drawablePadding="10dp"
@@ -52,7 +53,7 @@
         android:id="@+id/more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_more_24"
         android:drawablePadding="10dp"
