--- a/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_private_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_private_channel.xml
@@ -8,6 +8,7 @@
         android:id="@+id/call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_phone_24"
         android:drawablePadding="10dp"
@@ -22,7 +23,7 @@
         android:id="@+id/video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_video_24"
         android:drawablePadding="10dp"
@@ -37,6 +38,7 @@
         android:id="@+id/muteUnMute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_muted_channel"
         android:drawablePadding="10dp"
@@ -50,7 +52,7 @@
         android:id="@+id/more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:background="?selectableItemBackgroundBorderless"
         android:drawableTop="@drawable/sceyt_ic_more_24"
         android:drawablePadding="10dp"
