--- a/SceytChatUiKit/src/main/res/layout/sceyt_disable_message_input.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_disable_message_input.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/sceyt_color_bg"
     android:paddingHorizontal="20dp">
 
     <androidx.appcompat.widget.AppCompatImageView
