Fixed issue to handle error download state. Added logic to handle deleted user case in all pages.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_disable_message_input.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_disable_message_input.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/sceyt_color_bg"
-    android:paddingHorizontal="20dp">
+    android:background="@color/sceyt_color_bg">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icStateIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvMessage"
         app:layout_constraintHorizontal_bias="0.5"
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginEnd="20dp"
         android:drawablePadding="10dp"
         android:ellipsize="end"
         android:maxLines="3"
