--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -90,7 +90,7 @@
                 android:layout_marginTop="12dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:sceytAvatarBackgroundColor="#E3E7FF" />
+                app:sceytAvatarColor="#E3E7FF" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/icEditPhoto"
