--- a/SceytChatUiKit/src/main/res/layout/fragment_edit_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/fragment_edit_channel.xml
@@ -33,7 +33,8 @@
                 android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:sceytAvatarColor="#F3F5F7" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/icChangePhoto"
