--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
@@ -6,7 +6,7 @@
         <attr name="sceytAvatarViewFullName" format="string" />
         <attr name="sceytAvatarViewIsGroup" format="boolean" />
         <attr name="sceytAvatarViewTextSize" format="dimension|integer" />
-        <attr name="sceytAvatarBackgroundColor" format="color|reference" />
+        <attr name="sceytAvatarColor" format="color|reference" />
         <attr name="sceytAvatarDefaultIcon" format="reference" />
     </declare-styleable>
 
