--- a/SceytChatUiKit/src/main/res/values/sceyt_styles.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_styles.xml
@@ -20,6 +20,15 @@
         <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
 
+    <style xmlns:tools="http://schemas.android.com/tools" name="PreviewTheme" parent="SceytAppTheme">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges
+        </item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+    </style>
+
+
     <style name="SceytAppBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/SceytAppModalStyle</item>
     </style>
