--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_files.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_files.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvVoice"
+        android:id="@+id/rvFiles"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
@@ -14,5 +14,5 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:spanCount="3"
         tools:itemCount="9"
-        tools:listitem="@layout/item_channel_voice" />
+        tools:listitem="@layout/sceyt_item_channel_file" />
 </FrameLayout>
