--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_media.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_media.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvLinks"
+        android:id="@+id/rvFiles"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingTop="15dp"
-        android:paddingHorizontal="16dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:paddingHorizontal="2dp"
+        android:paddingTop="5dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="3"
         tools:itemCount="9"
-        tools:listitem="@layout/item_channel_link" />
+        tools:listitem="@layout/sceyt_item_channel_image" />
 
 </FrameLayout>
