--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_input_attachment.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_input_attachment.xml
@@ -52,4 +52,22 @@
         app:layout_constraintTop_toTopOf="@+id/viewBgClose"
         app:srcCompat="@drawable/sceyt_close_btn" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvDuration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:background="@drawable/sceyt_bg_corners_20"
+        android:backgroundTint="@color/sceyt_progress_bg_color"
+        android:includeFontPadding="false"
+        android:paddingHorizontal="6dp"
+        android:paddingVertical="3dp"
+        android:textColor="@color/sceyt_color_white"
+        android:textSize="11sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="0:11"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
