--- a/SceytChatUiKit/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
@@ -24,10 +24,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:animateLayoutChanges="true"
+        android:fontFamily="@font/roboto_medium"
         android:padding="10dp"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/bigTextSize"
-        android:textStyle="bold"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/icBack"
@@ -77,5 +77,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sceyt_ic_search" />
+
+    <View
+        android:id="@+id/underline"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/sceyt_color_divider"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
