--- a/SceytChatUiKit/src/main/res/values/colors.xml
+++ b/SceytChatUiKit/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="sceyt_color_light_themed">#FFFFFFFF</color>
 
     // Not themed colors
+    <color name="colorAccent">#4F6AFF</color>
     <color name="sceyt_color_accent">#4F6AFF</color>
     <color name="sceyt_color_black">#FFFFFFFF</color>
     <color name="sceyt_color_white">#FFFFFFFF</color>
