--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
@@ -22,6 +22,7 @@
         android:paddingVertical="10dp"
         app:layout_constraintBottom_toTopOf="@+id/messageInput"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_chainStyle="packed"
         tools:itemCount="5"
         tools:listitem="@layout/item_share_channel" />
 
@@ -29,7 +30,6 @@
         android:id="@+id/messageInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:background="@drawable/sceyt_bg_top_bottom_lines"
         android:hint="@string/sceyt_write_a_message"
         android:padding="16dp"
@@ -38,14 +38,16 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnShare"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvChannels" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnShare"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginVertical="12dp"
         android:background="@drawable/sceyt_bg_corners_6"
         android:backgroundTint="@color/colorAccent"
         android:text="@string/sceyt_share"
@@ -53,6 +55,7 @@
         android:textColor="@color/sceyt_color_white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/messageInput"
         tools:layout_editor_absoluteX="24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
