--- a/SceytChatUiKit/src/main/res/drawable/sceyt_close_btn.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_close_btn.xml
@@ -1,21 +1,22 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
-    android:viewportWidth="20"
-    android:viewportHeight="20"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="20dp"
-    android:height="20dp">
+    android:height="20dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20">
+  <group>
+    <clip-path
+        android:pathData="M0,0h20v20h-20z"/>
     <path
-        android:pathData="M19.3 10A9.3 9.3 0 0 1 0.7 10A9.3 9.3 0 0 1 19.3 10Z"
-        android:fillColor="#A3A5B0"/>
+        android:pathData="M10,20C15.523,20 20,15.523 20,10C20,4.477 15.523,0 10,0C4.477,0 0,4.477 0,10C0,15.523 4.477,20 10,20Z"
+        android:fillColor="#B2B6BE"
+        android:fillType="evenOdd"/>
     <path
-        android:pathData="M13.5 6.5L6.5 13.5"
-        android:strokeColor="#FFFFFF"
-        android:strokeWidth="1.4"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
+        android:pathData="M13.707,6.293C14.098,6.683 14.098,7.317 13.707,7.707L7.707,13.707C7.317,14.098 6.683,14.098 6.293,13.707C5.902,13.317 5.902,12.683 6.293,12.293L12.293,6.293C12.683,5.902 13.317,5.902 13.707,6.293Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
     <path
-        android:pathData="M6.5 6.5L13.5 13.5"
-        android:strokeColor="#FFFFFF"
-        android:strokeWidth="1.4"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
+        android:pathData="M6.293,6.293C6.683,5.902 7.317,5.902 7.707,6.293L13.707,12.293C14.098,12.683 14.098,13.317 13.707,13.707C13.317,14.098 12.683,14.098 12.293,13.707L6.293,7.707C5.902,7.317 5.902,6.683 6.293,6.293Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
