--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_link_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_link_message.xml
@@ -57,7 +57,7 @@
 
         <ViewStub
             android:id="@+id/viewReply"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="8dp"
