--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_files_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_files_message.xml
@@ -30,7 +30,7 @@
 
         <ViewStub
             android:id="@+id/viewReply"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="8dp"
