Added UI recorder view.

--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_voice.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_voice.xml
@@ -1,5 +1,13 @@
-<vector android:height="24dp" android:viewportHeight="20"
-    android:viewportWidth="17" android:width="20.4dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#B2B6BE" android:fillType="evenOdd" android:pathData="M8.194,0C5.951,0 4.132,1.819 4.132,4.063V8.438C4.132,10.681 5.951,12.5 8.194,12.5C10.438,12.5 12.257,10.681 12.257,8.438V4.063C12.257,1.819 10.438,0 8.194,0Z"/>
-    <path android:fillColor="#B2B6BE" android:pathData="M1.099,10C0.352,10 -0.206,10.694 0.073,11.387C1.232,14.271 3.882,16.394 7.069,16.803V18.875C7.069,19.496 7.573,20 8.194,20C8.816,20 9.319,19.496 9.319,18.875V16.803C12.506,16.394 15.157,14.271 16.316,11.387C16.595,10.694 16.037,10 15.29,10C14.774,10 14.328,10.344 14.114,10.814C13.091,13.062 10.825,14.625 8.194,14.625C5.564,14.625 3.298,13.062 2.275,10.814C2.061,10.344 1.615,10 1.099,10Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="20.4dp"
+    android:height="24dp"
+    android:viewportWidth="17"
+    android:viewportHeight="20">
+    <path
+        android:fillColor="#B2B6BE"
+        android:fillType="evenOdd"
+        android:pathData="M8.194,0C5.951,0 4.132,1.819 4.132,4.063V8.438C4.132,10.681 5.951,12.5 8.194,12.5C10.438,12.5 12.257,10.681 12.257,8.438V4.063C12.257,1.819 10.438,0 8.194,0Z" />
+    <path
+        android:fillColor="#B2B6BE"
+        android:pathData="M1.099,10C0.352,10 -0.206,10.694 0.073,11.387C1.232,14.271 3.882,16.394 7.069,16.803V18.875C7.069,19.496 7.573,20 8.194,20C8.816,20 9.319,19.496 9.319,18.875V16.803C12.506,16.394 15.157,14.271 16.316,11.387C16.595,10.694 16.037,10 15.29,10C14.774,10 14.328,10.344 14.114,10.814C13.091,13.062 10.825,14.625 8.194,14.625C5.564,14.625 3.298,13.062 2.275,10.814C2.061,10.344 1.615,10 1.099,10Z" />
 </vector>
