--- a/SceytChatUiKit/src/main/res/layout/activity_media.xml
+++ b/SceytChatUiKit/src/main/res/layout/activity_media.xml
@@ -6,7 +6,7 @@
     android:animateLayoutChanges="true"
     android:background="@color/sceyt_color_media_player_black">
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vpMedia"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
