--- a/SceytChatUiKit/src/main/res/layout/activity_media.xml
+++ b/SceytChatUiKit/src/main/res/layout/activity_media.xml
@@ -6,10 +6,12 @@
     android:animateLayoutChanges="true"
     android:background="@color/sceyt_color_media_player_black">
 
-    <androidx.viewpager2.widget.ViewPager2
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vpMedia"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
